# trash-academy

./: .env  .gitignore  Cargo.toml  README.md  meld.py
css/: custom.sass  package-lock.json  package.json
data/: instances.yaml  maw.yaml  mobs.yaml
migrations/2017-11-12-210205_create_mobs/: down.sql  up.sql
migrations/2017-11-12-210231_create_abilities/: down.sql  up.sql
src/: bin.rs  db.rs  instances.rs  lib.rs  mobs.rs
templates/: ability.html  amount3.html  instance.html  main.html  mob.html  mob_solo.html
